# advent-of-code-2024

./: .env.example  .gitignore  Cargo.toml  README.md  flake.nix
src/: main.rs  parse.rs  solutions.rs
src/solutions/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs
src/solutions/day24/: example.rs  failed-attempt.rs  mod.rs  parse.rs  part1.rs  types.rs
src/solutions/day24/part2/: correctness.rs  mod.rs  pairs_and_swaps.rs  search.rs
